paper material design layout

--- a/app/elements/scoreboard.html
+++ b/app/elements/scoreboard.html
@@ -2,7 +2,7 @@
 <link rel="import" href="../bower_components/core-ajax/core-ajax.html">
 <link rel="import" href="scorecard.html">
 
-<polymer-element name="polymer-scoreboard">
+<polymer-element name="polymer-scoreboard" horizontal justified layout wrap>
   <template>
     <core-ajax auto url="//192.171.0.120:3001/api/hockey" 
       handleAs="json" response="{{ response }}"></core-ajax>
