--- a/app/elements/scorecard.html
+++ b/app/elements/scorecard.html
@@ -132,6 +132,7 @@
             -moz-box-shadow: 0 4px 15px 0 darkgray;
             -webkit-box-shadow: 0 4px 15px 0 darkgray;
             margin-bottom:20px;
+            margin-right:20px;
         }
         section.scorecard section.top{
             width:100%;
