changed colors and shadow opacity

--- a/app/elements/scorecard.html
+++ b/app/elements/scorecard.html
@@ -128,9 +128,9 @@
             border-radius: 20px;
             border:0px solid;
             background-color:white;
-            box-shadow: 0 4px 15px 0 darkgray;
-            -moz-box-shadow: 0 4px 15px 0 darkgray;
-            -webkit-box-shadow: 0 4px 15px 0 darkgray;
+            box-shadow: 0 4px 15px 0 rgba(0,0,0,0.3);
+            -moz-box-shadow: 0 4px 15px 0 rgba(0,0,0,0.3);
+            -webkit-box-shadow: 0 4px 15px 0 rgba(0,0,0,0.3);
             margin-bottom:20px;
             margin-right:20px;
         }
