sorting and creation of monicor-app element

--- a/app/elements/scoreboard.html
+++ b/app/elements/scoreboard.html
@@ -1,12 +1,13 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="../bower_components/core-ajax/core-ajax.html">
+<link rel="import" href="../bower_components/polymer-filters/polymer-filters.html">
 <link rel="import" href="scorecard.html">
 
-<polymer-element name="polymer-scoreboard" horizontal justified layout wrap>
+<polymer-element name="polymer-scoreboard" horizontal justified-left layout wrap>
   <template>
     <core-ajax auto url="//192.171.0.120:3001/api/hockey" 
       handleAs="json" response="{{ response }}"></core-ajax>
-    <template repeat="{{ response.scores }}">
+    <template repeat="{{ response.scores | orderBy('event') }}">
       <polymer-scorecard 
           league="{{event}}"
           period="{{period}}"
