--- a/app/index.html
+++ b/app/index.html
@@ -14,102 +14,12 @@
         <!-- build:css styles/main.css -->
         <link rel="stylesheet" href="styles/main.css">
         <!-- endbuild-->
-        <style>
-      html,body {
-        height: 100%;
-        margin: 0;
-        background-color: lightgray;
-      }
-      core-header-panel {
-        height: 100%;
-        overflow: auto;
-        -webkit-overflow-scrolling: touch; 
-      }
-      core-toolbar {
-        background: #01868C;
-        color: white;
-      }
-
-      paper-tab::shadow #ink{
-        color: #2C7073;
-      }
-      paper-tabs::shadow #selectionBar {
-        background-color: #04B7BF;
-      }
-      #tabs {
-        width: 100%;
-        margin: 0;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-      text-transform: uppercase;
-      }
-
-      .container {
-        width: 80%;
-        margin: 50px auto;
-      }
-      @media (min-width: 481px) {
-        #tabs {
-          width: 200px;
-        }
-      }
-      </style>
 
         <!-- Place your HTML imports here -->
         <script src="bower_components/webcomponentsjs/webcomponents.js"></script>
-        <link rel="import" href="bower_components/core-header-panel/core-header-panel.html">
-        <link rel="import" href="bower_components/paper-elements/paper-elements.html">
-        <link rel="import" href="bower_components/core-toolbar/core-toolbar.html">
-        <link rel="import" href="bower_components/paper-tabs/paper-tabs.html">
-        <link rel="import" href="bower_components/paper-toast/paper-toast.html">
-        <link rel="import" href="bower_components/paper-fab/paper-fab.html">
-        <link rel="import" href="elements/list.html">
-        <link rel="import" href="elements/greeting.html">
-        <link rel="import" href="elements/scoreboard.html">
+        <link rel="import" href="elements/monicore-app.html">
     </head>
     <body>
-      <core-header-panel>
-        <core-toolbar>
-              <paper-tabs id="tabs" selected="welcome" self-end>
-                <paper-tab name="welcome">Welcome</paper-tab>
-                <paper-tab name="hockey">Hockey</paper-tab>
-              </paper-tabs>
-
-        </core-toolbar>
-        <div class="container">
-          <div id="welcome" class="content hero-unit" layout vertical center>
-                <polymer-greeting></polymer-greeting>
-                <p>You now have</p>
-                <paper-checkbox style="margin:20px;"></paper-checkbox>
-                <paper-fab mini icon="favorite" onclick="toastFromButton();"></paper-fab>
-                <polymer-list></polymer-list>
-          </div>
-          <div id="hockey" class="content">
-                <polymer-scoreboard></polymer-scoreboard>
-          </div>
-        </div>
-        <paper-toast id="toast" text="Your page has been loaded."></paper-toast>
-      </core-header-panel>
-      <script>
-        var tabs = document.querySelector('paper-tabs');
-        var show = tabs.selected;
-
-        tabs.addEventListener('core-select', function() {
-          show = tabs.selected;
-          contents = document.querySelectorAll('.content');
-          for (i = 0; i < contents.length; ++i) {
-            contents[i].hidden=true;
-          }
-          document.querySelector('#'+show).hidden=false;
-        });
-        document.addEventListener('WebComponentsReady', function() {
-            document.querySelector('#toast').show();
-        });
-        function toastFromButton(){
-          document.querySelector('#toast').show();
-        }
-      </script>
+      <monicore-app></monicore-app>
     </body>
 </html>
