--- a/app/websocketClient.html
+++ b/app/websocketClient.html
@@ -37,13 +37,18 @@ if (window["WebSocket"]) {
 	function WriteEvent(message)
 	{
 		var currentdate = new Date(); 
-		var datetime = currentdate.getDate() + "/"
-                + (currentdate.getMonth()+1)  + "/" 
-                + currentdate.getFullYear() + " @ "  
-                + currentdate.getHours() + ":"  
-                + currentdate.getMinutes() + ":" 
-                + currentdate.getSeconds()+ " - ";
-
+		var day = currentdate.getDate();
+		day = day < 10 ? '0'+day : day;
+		var month = currentdate.getMonth()+1;
+		month = month < 10 ? '0'+month : month;
+		var year = currentdate.getFullYear();
+		var hours = currentdate.getHours();
+		hours = hours < 10 ? '0'+hours : hours;
+		var minutes = currentdate.getMinutes();
+		minutes = minutes < 10 ? '0'+minutes : minutes;
+		var seconds = currentdate.getSeconds();
+		seconds = seconds < 10 ? '0'+seconds : seconds;
+		var datetime = day + "/" + month + "/" + year + " @ " + hours + ":" + minutes + ":" + seconds + " - ";
 		var formattedMessage = "<div>" + datetime + "<b>" + message + "</b>" + "</div>";
 		document.getElementById("log").innerHTML += formattedMessage;
 	}
