--- a/app/elements/scorecard.html
+++ b/app/elements/scorecard.html
@@ -21,100 +21,100 @@
         </section>
     </section>
     <style type="text/css">
-        .NHL-ANA span.logo{
-            background:url('http://media-cache-ec0.pinimg.com/736x/1f/ff/05/1fff05532a55d20f65c6b053cf1517fc.jpg') -02px -02px no-repeat;background-size: 522%;
+        section.scorecard section.score section.team.NHL-ANA span.logo{
+            background-position:-02px -02px;
         }
-        .NHL-BOS span.logo{
-            background:url('http://media-cache-ec0.pinimg.com/736x/1f/ff/05/1fff05532a55d20f65c6b053cf1517fc.jpg') -36px -02px no-repeat;background-size: 522%;
+        section.scorecard section.score section.team.NHL-BOS span.logo{
+            background-position:-36px -02px;
         }
-        .NHL-BUF span.logo{
-            background:url('http://media-cache-ec0.pinimg.com/736x/1f/ff/05/1fff05532a55d20f65c6b053cf1517fc.jpg') -70px -02px no-repeat;background-size: 522%;
+        section.scorecard section.score section.team.NHL-BUF span.logo{
+            background-position:-70px -02px;
         }
-        .NHL-CGY span.logo{
-            background:url('http://media-cache-ec0.pinimg.com/736x/1f/ff/05/1fff05532a55d20f65c6b053cf1517fc.jpg') -104px -02px no-repeat;background-size: 522%;
+        section.scorecard section.score section.team.NHL-CGY span.logo{
+            background-position:-104px -02px;
         }
-        .NHL-CAR span.logo{
-            background:url('http://media-cache-ec0.pinimg.com/736x/1f/ff/05/1fff05532a55d20f65c6b053cf1517fc.jpg') -139px -02px no-repeat;background-size: 522%;
-        }
-
-        .NHL-CHI span.logo{
-            background:url('http://media-cache-ec0.pinimg.com/736x/1f/ff/05/1fff05532a55d20f65c6b053cf1517fc.jpg') -02px -53px no-repeat;background-size: 522%;
-        }
-        .NHL-CBJ span.logo{
-            background:url('http://media-cache-ec0.pinimg.com/736x/1f/ff/05/1fff05532a55d20f65c6b053cf1517fc.jpg') -36px -53px no-repeat;background-size: 522%;
-        }
-        .NHL-COL span.logo{
-            background:url('http://media-cache-ec0.pinimg.com/736x/1f/ff/05/1fff05532a55d20f65c6b053cf1517fc.jpg') -70px -53px no-repeat;background-size: 522%;
-        }
-        .NHL-DAL span.logo{
-            background:url('http://media-cache-ec0.pinimg.com/736x/1f/ff/05/1fff05532a55d20f65c6b053cf1517fc.jpg') -104px -53px no-repeat;background-size: 522%;
-        }
-        .NHL-DET span.logo{
-            background:url('http://media-cache-ec0.pinimg.com/736x/1f/ff/05/1fff05532a55d20f65c6b053cf1517fc.jpg') -139px -53px no-repeat;background-size: 522%;
+        section.scorecard section.score section.team.NHL-CAR span.logo{
+            background-position:-139px -02px;
         }
 
-        .NHL-EDM span.logo{
-            background:url('http://media-cache-ec0.pinimg.com/736x/1f/ff/05/1fff05532a55d20f65c6b053cf1517fc.jpg') -02px -104px no-repeat;background-size: 522%;
+        section.scorecard section.score section.team.NHL-CHI span.logo{
+            background-position:-02px -53px;
         }
-        .NHL-FLA span.logo{
-            background:url('http://media-cache-ec0.pinimg.com/736x/1f/ff/05/1fff05532a55d20f65c6b053cf1517fc.jpg') -36px -104px no-repeat;background-size: 522%;
+        section.scorecard section.score section.team.NHL-CBJ span.logo{
+            background-position:-36px -53px;
         }
-        .NHL-LAK span.logo{
-            background:url('http://media-cache-ec0.pinimg.com/736x/1f/ff/05/1fff05532a55d20f65c6b053cf1517fc.jpg') -70px -104px no-repeat;background-size: 522%;
+        section.scorecard section.score section.team.NHL-COL span.logo{
+            background-position:-70px -53px;
         }
-        .NHL-MIN span.logo{
-            background:url('http://media-cache-ec0.pinimg.com/736x/1f/ff/05/1fff05532a55d20f65c6b053cf1517fc.jpg') -104px -104px no-repeat;background-size: 522%;
+        section.scorecard section.score section.team.NHL-DAL span.logo{
+            background-position:-104px -53px;
         }
-        .NHL-MTL span.logo{
-            background:url('http://media-cache-ec0.pinimg.com/736x/1f/ff/05/1fff05532a55d20f65c6b053cf1517fc.jpg') -139px -104px no-repeat;background-size: 522%;
-        }
-
-        .NHL-NSH span.logo{
-            background:url('http://media-cache-ec0.pinimg.com/736x/1f/ff/05/1fff05532a55d20f65c6b053cf1517fc.jpg') -02px -156px no-repeat;background-size: 522%;
-        }
-        .NHL-NJD span.logo{
-            background:url('http://media-cache-ec0.pinimg.com/736x/1f/ff/05/1fff05532a55d20f65c6b053cf1517fc.jpg') -36px -156px no-repeat;background-size: 522%;
-        }
-        .NHL-NYI span.logo{
-            background:url('http://media-cache-ec0.pinimg.com/736x/1f/ff/05/1fff05532a55d20f65c6b053cf1517fc.jpg') -70px -156px no-repeat;background-size: 522%;
-        }
-        .NHL-NYR span.logo{
-            background:url('http://media-cache-ec0.pinimg.com/736x/1f/ff/05/1fff05532a55d20f65c6b053cf1517fc.jpg') -104px -155px no-repeat;background-size: 522%;
-        }
-        .NHL-OTT span.logo{
-            background:url('http://media-cache-ec0.pinimg.com/736x/1f/ff/05/1fff05532a55d20f65c6b053cf1517fc.jpg') -139px -156px no-repeat;background-size: 522%;
+        section.scorecard section.score section.team.NHL-DET span.logo{
+            background-position:-139px -53px;
         }
 
-        .NHL-PHI span.logo{
-            background:url('http://media-cache-ec0.pinimg.com/736x/1f/ff/05/1fff05532a55d20f65c6b053cf1517fc.jpg') -02px -206px no-repeat;background-size: 522%;
+        section.scorecard section.score section.team.NHL-EDM span.logo{
+            background-position:-02px -104px;
         }
-        .NHL-ARI span.logo{
-            background:url('http://media-cache-ec0.pinimg.com/736x/1f/ff/05/1fff05532a55d20f65c6b053cf1517fc.jpg') -36px -206px no-repeat;background-size: 522%;
+        section.scorecard section.score section.team.NHL-FLA span.logo{
+            background-position:-36px -104px;
         }
-        .NHL-PIT span.logo{
-            background:url('http://media-cache-ec0.pinimg.com/736x/1f/ff/05/1fff05532a55d20f65c6b053cf1517fc.jpg') -70px -206px no-repeat;background-size: 522%;
+        section.scorecard section.score section.team.NHL-LAK span.logo{
+            background-position:-70px -104px;
         }
-        .NHL-SJS span.logo{
-            background:url('http://media-cache-ec0.pinimg.com/736x/1f/ff/05/1fff05532a55d20f65c6b053cf1517fc.jpg') -104px -206px no-repeat;background-size: 522%;
+        section.scorecard section.score section.team.NHL-MIN span.logo{
+            background-position:-104px -104px;
         }
-        .NHL-STL span.logo{
-            background:url('http://media-cache-ec0.pinimg.com/736x/1f/ff/05/1fff05532a55d20f65c6b053cf1517fc.jpg') -139px -206px no-repeat;background-size: 522%;
+        section.scorecard section.score section.team.NHL-MTL span.logo{
+            background-position:-139px -104px;
         }
 
-        .NHL-TBL span.logo{
-            background:url('http://media-cache-ec0.pinimg.com/736x/1f/ff/05/1fff05532a55d20f65c6b053cf1517fc.jpg') -02px -258px no-repeat;background-size: 522%;
+        section.scorecard section.score section.team.NHL-NSH span.logo{
+            background-position:-02px -156px;
         }
-        .NHL-TOR span.logo{
-            background:url('http://media-cache-ec0.pinimg.com/736x/1f/ff/05/1fff05532a55d20f65c6b053cf1517fc.jpg') -36px -258px no-repeat;background-size: 522%;
+        section.scorecard section.score section.team.NHL-NJD span.logo{
+            background-position:-36px -156px;
         }
-        .NHL-VAN span.logo{
-            background:url('http://media-cache-ec0.pinimg.com/736x/1f/ff/05/1fff05532a55d20f65c6b053cf1517fc.jpg') -70px -258px no-repeat;background-size: 522%;
+        section.scorecard section.score section.team.NHL-NYI span.logo{
+            background-position:-70px -156px;
         }
-        .NHL-WSH span.logo{
-            background:url('http://media-cache-ec0.pinimg.com/736x/1f/ff/05/1fff05532a55d20f65c6b053cf1517fc.jpg') -104px -258px no-repeat;background-size: 522%;
+        section.scorecard section.score section.team.NHL-NYR span.logo{
+            background-position:-104px -155px;
         }
-        .NHL-WPG span.logo{
-            background:url('http://media-cache-ec0.pinimg.com/736x/1f/ff/05/1fff05532a55d20f65c6b053cf1517fc.jpg') -139px -257px no-repeat;background-size: 522%;
+        section.scorecard section.score section.team.NHL-OTT span.logo{
+            background-position:-139px -156px;
+        }
+
+        section.scorecard section.score section.team.NHL-PHI span.logo{
+            background-position:-02px -206px;
+        }
+        section.scorecard section.score section.team.NHL-ARI span.logo{
+            background-position:-36px -206px;
+        }
+        section.scorecard section.score section.team.NHL-PIT span.logo{
+            background-position:-70px -206px;
+        }
+        section.scorecard section.score section.team.NHL-SJS span.logo{
+            background-position:-104px -206px;
+        }
+        section.scorecard section.score section.team.NHL-STL span.logo{
+            background-position:-139px -206px;
+        }
+
+        section.scorecard section.score section.team.NHL-TBL span.logo{
+            background-position:-02px -258px;
+        }
+        section.scorecard section.score section.team.NHL-TOR span.logo{
+            background-position:-36px -258px;
+        }
+        section.scorecard section.score section.team.NHL-VAN span.logo{
+            background-position:-70px -258px;
+        }
+        section.scorecard section.score section.team.NHL-WSH span.logo{
+            background-position:-104px -258px;
+        }
+        section.scorecard section.score section.team.NHL-WPG span.logo{
+            background-position:-139px -257px;
         }
 
         .NHL{
@@ -123,9 +123,9 @@
         section.scorecard{
             width:300px;
             height:180px;
-            -webkit-border-radius: 20px;
-            -moz-border-radius: 20px;
-            border-radius: 20px;
+            -webkit-border-radius: 5px;
+            -moz-border-radius: 5px;
+            border-radius: 5px;
             border:0px solid;
             background-color:white;
             box-shadow: 0 4px 15px 0 rgba(0,0,0,0.3);
@@ -139,7 +139,7 @@
             height:30px;
             padding-top: 20px;
             font-weight:bold;
-            border-top-left-radius: 20px;
+            border-top-left-radius: 5px;
         }
         section.scorecard section.top span.league{display:inline-block;width:150px;margin-left: 6px;}
         section.scorecard section.top span.period{display:inline-block;width:130px;text-align:right;}
@@ -148,6 +148,8 @@
             width:100%;height:40px;padding-top: 10px;border-top:0px solid;background-color: white;box-shadow: inset 20px 0 80px -20px darkgray;-moz-box-shadow: inset 20px 0 80px -20px darkgray;-webkit-box-shadow: inset 20px 0 80px -20px darkgray;
         }
         section.scorecard section.score section.team span.logo{
+            background:url('http://media-cache-ec0.pinimg.com/736x/1f/ff/05/1fff05532a55d20f65c6b053cf1517fc.jpg') no-repeat;
+            background-size: 522%;
             float:left;height:50px;width:33px;position:relative;top:-10px;left:0px;display:inline-block;
         }
         section.scorecard section.score section.team span.fullname{
