--- a/app/elements/scorecard.html
+++ b/app/elements/scorecard.html
@@ -148,7 +148,7 @@
             width:100%;height:40px;padding-top: 10px;border-top:0px solid;background-color: white;box-shadow: inset 20px 0 80px -20px darkgray;-moz-box-shadow: inset 20px 0 80px -20px darkgray;-webkit-box-shadow: inset 20px 0 80px -20px darkgray;
         }
         section.scorecard section.score section.team span.logo{
-            background:url('http://media-cache-ec0.pinimg.com/736x/1f/ff/05/1fff05532a55d20f65c6b053cf1517fc.jpg') no-repeat;
+            background:url('http://media-cache-ec0.pinimg.com/736x/1f/ff/05/1fff05532a55d20f65c6b053cf1517fc.jpg') 100px 100px no-repeat;
             background-size: 522%;
             float:left;height:50px;width:33px;position:relative;top:-10px;left:0px;display:inline-block;
         }
