--- a/app/elements/weathercard.html
+++ b/app/elements/weathercard.html
@@ -1,23 +1,34 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="../bower_components/polymer-filters/polymer-filters.html">
 <link rel="import" href="../bower_components/core-ajax/core-ajax.html">
 
 <polymer-element name="polymer-weathercard" attributes="">
   <template>
   	<core-ajax auto url="//192.171.0.120:3001/api/weather" handleAs="json" response="{{ response }}"></core-ajax>
-  	<section class="weathercard">
-  		<section>{{nowDate()}}</section>
-  		<section><span class="weather-icon icon{{response.weather[0].icon}}"></span>
-  			temperature{{convertDegrees(response.main.temp)}}{{degreesUnit}}
-  		</section>
+  	<core-ajax auto url="//192.171.0.120:3001/api/weather?t=forecast" handleAs="json" response="{{ forecast }}"></core-ajax>
+  	<section class="weathercard" style="padding:10px;">
   		<section>
-  			Humidity:{{response.main.humidity}}%
-  			Wind:{{convertSpeed(response.wind.speed)}}{{speedUnit}}
+  			<section style="font-size: large;">{{nowDate()}}<div>{{nowTime()}}</div></section>
+  			<section style="font-size: x-large;">{{response.weather[0].main}}</section>
+  		</section>
+  		<section style="font-size: 40px;width: 60%;float: left;">
+  			<span class="weather-icon icon{{response.weather[0].icon}}"></span>
+  			{{convertDegrees(response.main.temp)}}{{degreesUnit}}
+  		</section>
+  		<section style="width: 40%;float: left;">
+  			<section>Humidity: {{response.main.humidity}}%</section>
+  			<section>Wind: {{convertSpeed(response.wind.speed)}}{{speedUnit}}</section>
+  		</section>
+  		<section style="float: left;">
+  			<template repeat="{{ l in forecast.list | orderBy(['dt']) }}">
+  				<section>{{l.dt_txt}} {{convertDegrees(l.main.temp)}}</section>
+  				
+  			</template>
   		</section>
   	</section>
   	<style type="text/css">
   		section.weathercard{
             width:300px;
-            height:180px;
             -webkit-border-radius: 5px;
             -moz-border-radius: 5px;
             border-radius: 5px;
@@ -29,6 +40,7 @@
             margin-bottom:20px;
             margin-right:20px;
             margin-top: 5px;
+            float: left;
         }
         section.weathercard section span.weather-icon.icon01d{
         	background-position: -272px -27px;
@@ -94,7 +106,10 @@
   <script>
     Polymer('polymer-weathercard', {
     	nowDate: function(){
-    		return moment().format('dddd, MMMM Do, h:mm a');
+    		return moment().format('dddd, MMMM Do');
+    	},
+    	nowTime: function(){
+    		return moment().format('h:mm a');
     	},
     	degreesUnit: '°C',
     	convertDegrees: function(kDegrees){
